# web_container

./: .gitignore  Cargo.toml  README.md  build.sh
resources/: index.html
src/: container.rs  container_desktop.rs  lib.rs  main.rs  packing.rs
src/container/: browser_impl.rs  desktop_impl.rs  header.rs  std_container.rs
