[package]
name = "web_container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# browser targets without std 
[target.'cfg(all(target_family = "wasm", not(target_os = "wasi")))'.dependencies]
wasm-bindgen = { version = "0.2.78" }
js-sys = { version = "0.3.55" }
wasm-bindgen-futures = { version = "0.4.28" }
web-sys = { version = "0.3.4", features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlButtonElement',
    'HtmlCollection',
    'HtmlInputElement',
    'HtmlFormElement',
    'FormData',
    'Node',
    'Window',
    'AudioContext',
    'BaseAudioContext',
    'AudioNode',
    'AudioBuffer',
    'AudioBufferSourceNode',
    'Navigator',
    'MediaDevices',
    'MediaDeviceInfo',
    'MediaStream',
    'MediaStreamConstraints',
    'MediaStreamAudioSourceNode',
    'MediaStreamAudioDestinationNode',
    'ScriptProcessorNode',
    'AudioDestinationNode',
    'AudioProcessingEvent',
    'Worklet',
    'AudioWorklet',
    'WorkletOptions',
    'AudioWorkletNode',
    'AudioParamMap',
    'console',
    'Event',
    'MouseEvent',
    'FocusEvent',
    'XmlHttpRequest',
    'Location',
    'Blob',
    'BlobPropertyBag',
    'EndingTypes',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
] }

# desktop targets with std implemented
[target.'cfg(not(all(target_family = "wasm", not(target_os = "wasi"))))'.dependencies]
tokio = { version = "1.0.0", default-features = false, features = [
    'rt',
    'fs',
    'io-util',
    'rt-multi-thread',
] }
